<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.recycler_bin.RecyclerBinFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerviewMemo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <TextView
        android:id="@+id/tv_nothing_recycler"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nothing_to_show"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/searchInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints=""
            android:background="@drawable/shape_title_input"
            android:ems="10"
            android:hint="@string/search"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp" />

        <Button
            android:id="@+id/button_search_recycler"
            android:layout_width="wrap_content"
            android:layout_height="52dp"
            android:layout_marginStart="4dp"
            android:textColor="@color/color_btn_txt"
            android:layout_weight="0"
            android:text="@string/search" />

        <Button
            android:id="@+id/button_cancel_recycler"
            android:layout_width="wrap_content"
            android:layout_height="52dp"
            android:layout_marginStart="4dp"
            android:textColor="@color/color_btn_txt"
            android:layout_weight="0"
            android:text="@string/cancel" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>